Added edit priority
