# server/storage/api-docs/api-docs.json
@@ -98,6 +98,54 @@
                 }
             }
         },
+        "/api/priority/edit/{id}": {
+            "put": {
+                "tags": [
+                    "პრიორიტეტების API"
+                ],
+                "summary": "პრიორიტეტის დარედაქტირების მარშუტი",
+                "description": "პრიორიტეტების დარედაქტირების მეთოდი",
+                "operationId": "d48bc549c867f82954f3fe560605e980",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "priority id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "format": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "პრიორიტეტი დარედაქტირდა"
+                    },
+                    "422": {
+                        "description": "პრიორიტეტი ვერ დარედაქტირდა"
+                    }
+                }
+            }
+        },
         "/api/status/list": {
             "get": {
                 "tags": [
@@ -308,39 +356,6 @@
                     },
                     "422": {
                         "description": "თასქი ვერ წაიშალა"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/task/by_status/{id}": {
-            "get": {
-                "tags": [
-                    "თასქების API"
-                ],
-                "summary": "თასქის წამოღების მარშუტი სტატუსის აიდის მიხედვით",
-                "operationId": "c4bd24be55714d29ce612df0e4ce3a2c",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "სტატუსის აიდი",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "422": {
-                        "description": "Unprocessable content"
                     }
                 },
                 "security": [
